--- a/playbooks/snow_attach_store_diagnostic_report.yml
+++ b/playbooks/snow_attach_store_diagnostic_report.yml
@@ -17,20 +17,20 @@
         - tasks/snow_attach_store_diagnostic_report/mist.yml
 
   post_tasks:
-    # - name: Render diagnostic report
-    #   ansible.builtin.template:
-    #     src: templates/snow_attach_store_diagnostic_report.j2
-    #     dest: "{{ output_dir }}/{{ snow_incident | lower }}_store_diagnostic_report_{{ timestamp }}.txt"
+    - name: Render diagnostic report
+      ansible.builtin.template:
+        src: templates/snow_attach_store_diagnostic_report.j2
+        dest: "{{ output_dir }}/{{ snow_incident | lower }}_store_diagnostic_report_{{ timestamp }}.txt"
 
-    # - name: Attach diagnostic report to incident
-    #   servicenow.itsm.incident:
-    #     instance:
-    #       host: "{{ snow_instance }}"
-    #       username: "{{ snow_username }}"
-    #       password: "{{ snow_password }}"
-    #     number: "{{ snow_incident }}"
-    #     attachments:
-    #       - path: "{{ output_dir }}/{{ snow_incident | lower }}_store_diagnostic_report_{{ timestamp }}.txt"
+    - name: Attach diagnostic report to incident
+      servicenow.itsm.incident:
+        instance:
+          host: "{{ snow_instance }}"
+          username: "{{ snow_username }}"
+          password: "{{ snow_password }}"
+        number: "{{ snow_incident }}"
+        attachments:
+          - path: "{{ output_dir }}/{{ snow_incident | lower }}_store_diagnostic_report_{{ timestamp }}.txt"
 
     - name: Set work_notes fact
       ansible.builtin.set_fact:
@@ -251,15 +251,15 @@
             Sacramento: <span style="color: red">N/A</span><br />
           {% endif %}
 
-    # - name: Update incident work notes
-    #   servicenow.itsm.incident:
-    #     instance:
-    #       host: "{{ snow_instance }}"
-    #       username: "{{ snow_username }}"
-    #       password: "{{ snow_password }}"
-    #     number: "{{ snow_incident }}"
-    #     other:
-    #       work_notes: |
-    #         [code]<h3>Store Analysis</h3><pre style="background-color: transparent; border-width: 0">[/code]
-    #         [code]{{ work_notes }}[/code]
-    #         [code]</pre>[/code]
+    - name: Update incident work notes
+      servicenow.itsm.incident:
+        instance:
+          host: "{{ snow_instance }}"
+          username: "{{ snow_username }}"
+          password: "{{ snow_password }}"
+        number: "{{ snow_incident }}"
+        other:
+          work_notes: |
+            [code]<h3>Store Analysis</h3><pre style="background-color: transparent; border-width: 0">[/code]
+            [code]{{ work_notes }}[/code]
+            [code]</pre>[/code]
