--- a/playbooks/snow_attach_store_diagnostic_report.yml
+++ b/playbooks/snow_attach_store_diagnostic_report.yml
@@ -40,44 +40,44 @@
           {% if store_switch_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) %}
             Pingable: Yes<br />
           {% else %}
-            Pingable: <span style="color: red">No</span><br />
+            Pingable: No 🔴<br />
           {% endif %}
           {% else %}
-            Pingable: <span style="color: red">N/A</span><br />
+            Pingable: N/A 🔴<br />
           {% endif %}
           {% if not store_switch_uptime.stderr | default("failed") %}
             Uptime: {{ store_switch_uptime.stdout_lines[5] | regex_replace("^.+uptime is ", "") }}<br />
           {% else %}
-            Uptime: <span style="color: red">N/A</span><br />
+            Uptime: N/A 🔴<br />
           {% endif %}
           Store Router:<br />
           {% if not store_router_ping.stderr | default("failed") %}
           {% if store_router_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) %}
             Pingable: Yes<br />
           {% else %}
-            Pingable: <span style="color: red">No</span><br />
+            Pingable: No 🔴<br />
           {% endif %}
           {% else %}
-            Pingable: <span style="color: red">N/A</span><br />
+            Pingable: N/A 🔴<br />
           {% endif %}
           {% if not store_subnet_lookup.stderr | default("failed") %}
           {% if store_subnet_lookup.stdout_lines[5] | regex_search(store_subnet, multiline=False, ignorecase=False) %}
           MPLS Path: Up<br />
           {% else %}
-          MPLS Path: <span style="color: red">Down</span><br />
+          MPLS Path: Down 🔴<br />
           {% endif %}
           {% else %}
-          MPLS Path: <span style="color: red">N/A</span><br />
+          MPLS Path: N/A 🔴<br />
           {% endif %}
           {% if not sdwan_store %}
           {% if not store_bb_tunnel_status.stderr | default("failed") %}
           {% if store_bb_tunnel_status.stdout | regex_search("prefixes\s[1-9]\d*\s*$", multiline=True, ignorecase=False) %}
           Broadband Tunnel: Up<br />
           {% else %}
-          Broadband Tunnel: <span style="color: red">Down</span><br />
+          Broadband Tunnel: Down 🔴<br />
           {% endif %}
           {% else %}
-          Broadband Tunnel: <span style="color: red">N/A</span><br />
+          Broadband Tunnel: N/A 🔴<br />
           {% endif %}
           {% endif %}
           {% if sdwan_store %}
@@ -86,26 +86,26 @@
           {% if asbc1_hub_1_sessions.json.data | default("") %}
               Ashburn Hub Router:<br />
           {% for s in asbc1_hub_1_sessions.json.data %}
-                {{ s["local-color"] | title }}: {% if s.state == "up" %}Up<br />{% else %}<span style="color: red">{{ s.state | title }}</span><br />{% endif +%}
+                {{ s["local-color"] | title }}: {% if s.state == "up" %}Up<br />{% else %}{{ s.state | title }} 🔴<br />{% endif +%}
           {% endfor %}
           {% else %}
-              Ashburn Hub Router: <span style="color: red">N/A</span><br />
+              Ashburn Hub Router: N/A 🔴<br />
           {% endif %}
           {% if rkat1_hub_1_sessions.json.data | default("") %}
               Rocklin Hub Router 1:<br />
           {% for s in rkat1_hub_1_sessions.json.data %}
-                {{ s["local-color"] | title }}: {% if s.state == "up" %}Up<br />{% else %}<span style="color: red">{{ s.state | title }}</span><br />{% endif +%}
+                {{ s["local-color"] | title }}: {% if s.state == "up" %}Up<br />{% else %}{{ s.state | title }} 🔴<br />{% endif +%}
           {% endfor %}
           {% else %}
-              Rocklin Hub Router 1: <span style="color: red">N/A</span><br />
+              Rocklin Hub Router 1: N/A 🔴<br />
           {% endif %}
           {% if rkat1_hub_2_sessions.json.data | default("") %}
               Rocklin Hub Router 2:<br />
           {% for s in rkat1_hub_2_sessions.json.data %}
-                {{ s["local-color"] | title }}: {% if s.state == "up" %}Up<br />{% else %}<span style="color: red">{{ s.state | title }}</span><br />{% endif +%}
+                {{ s["local-color"] | title }}: {% if s.state == "up" %}Up<br />{% else %}{{ s.state | title }} 🔴<br />{% endif +%}
           {% endfor %}
           {% else %}
-              Rocklin Hub Router 2: <span style="color: red">N/A</span><br />
+              Rocklin Hub Router 2: N/A 🔴<br />
           {% endif %}
           {% if tloc_stats.json.data | default("") %}
             TLOC Stats (Past Hour):<br />
@@ -117,14 +117,14 @@
           {% set stats =  tloc_stats.json.data | selectattr("remote_color", "equalto", c) | map(attribute=p | lower) | list %}
           {% set stats_mean = "%.2f" | format(stats | sum / stats | length) %}
           {% if p == "vQoE_Score" and stats_mean | int <= 5 %}
-                {{ p | replace("_", " ") }}: <span style="color: red">{{ stats_mean }}</span><br />
+                {{ p | replace("_", " ") }}: {{ stats_mean }} 🔴<br />
           {% else %}
                 {{ p | replace("_", " ") }}: {{ stats_mean }}<br />
           {% endif %}
           {% endfor %}
           {% endfor %}
           {% else %}
-            TLOC Stats (Past Hour): <span style="color: red">N/A</span><br />
+            TLOC Stats (Past Hour): N/A 🔴<br />
           {% endif %}
           {% endif %}
           {% if mist_store %}
@@ -134,13 +134,13 @@
           {% if mist_site_stats.json.num_ap_connected == mist_site_stats.json.num_ap %}
             Connected APs: {{ mist_site_stats.json.num_ap_connected }}/{{ mist_site_stats.json.num_ap }}<br />
           {% else %}
-            Connected APs: <span style="color: red">{{ mist_site_stats.json.num_ap_connected }}/{{ mist_site_stats.json.num_ap }}</span><br />
+            Connected APs: {{ mist_site_stats.json.num_ap_connected }}/{{ mist_site_stats.json.num_ap }} 🔴<br />
           {% endif %}
             Connected Clients: {{ mist_site_stats.json.num_clients }}<br />
           {% else %}
-            Site: <span style="color: red">N/A</span><br />
-            Connected APs: <span style="color: red">N/A</span><br />
-            Connected Clients: <span style="color: red">N/A</span><br />
+            Site: N/A 🔴<br />
+            Connected APs: N/A 🔴<br />
+            Connected Clients: N/A 🔴<br />
           {% endif %}
           {% if mist_wlans.json | default("") %}
             SSIDs:<br />
@@ -150,14 +150,14 @@
                 Connected Clients: {{ mist_client_stats.json | selectattr('ssid', 'match', wlan.ssid) | length }}<br />
           {% endfor %}
           {% else %}
-            SSIDs: <span style="color: red">N/A</span><br />
+            SSIDs: N/A 🔴<br />
           {% endif %}
           {% if mist_client_stats.json | default("") %}
           {% set rssi =  mist_client_stats.json | map(attribute='rssi') | sort %}
             RSSI:<br />
-              Best: {% if rssi[-1] | int > -70 %}{{ rssi[-1] }}{% else %}<span style="color: red">{{ rssi[-1] }}</span>{% endif %}<br />
-              Worst: {% if rssi[0] | int > -70 %}{{ rssi[0] }}{% else %}<span style="color: red">{{ rssi[0] }}</span>{% endif %}<br />
-              Median: {% if rssi[rssi | length // 2] | int > -70 %}{{ rssi[rssi | length // 2] }}{% else %}<span style="color: red">{{ rssi[rssi | length // 2] }}</span>{% endif %}<br />
+              Best: {% if rssi[-1] | int > -70 %}{{ rssi[-1] }}{% else %}{{ rssi[-1] }} 🔴{% endif %}<br />
+              Worst: {% if rssi[0] | int > -70 %}{{ rssi[0] }}{% else %}{{ rssi[0] }} 🔴{% endif %}<br />
+              Median: {% if rssi[rssi | length // 2] | int > -70 %}{{ rssi[rssi | length // 2] }}{% else %}{{ rssi[rssi | length // 2] }} 🔴{% endif %}<br />
               Top 5 Worst:<br />
           {% for c in (mist_client_stats.json | sort(attribute="rssi"))[:5] %}
           {% if c.hostname | default("") and c.hostname | default("") != "\"\"" %}
@@ -165,25 +165,25 @@
           {% else %}
                 {{ c.ip }}:<br />
           {% endif %}
-                  RSSI: {% if c.rssi | int > -70 %}{{ c.rssi }}{% else %}<span style="color: red">{{ c.rssi }}</span>{% endif %}<br />
-                  SNR: {% if c.snr | int > 25 %}{{ c.snr }}{% else %}<span style="color: red">{{ c.snr }}</span>{% endif %}<br />
+                  RSSI: {% if c.rssi | int > -70 %}{{ c.rssi }}{% else %}{{ c.rssi }} 🔴{% endif %}<br />
+                  SNR: {% if c.snr | int > 25 %}{{ c.snr }}{% else %}{{ c.snr }} 🔴{% endif %}<br />
                   SSID: {{ c.ssid }}<br />
                   Channel: {{ c.channel }}<br />
                   MAC Address: {{ c.mac }}<br />
                   Username: {{ c.username | default("") }}<br />
           {% endfor %}
           {% else %}
-            RSSI: <span style="color: red">N/A</span><br />
+            RSSI: N/A 🔴<br />
           {% endif %}
           {% endif %}
           {% if not store_internet_egress.stderr | default("failed") %}
           {% if store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=True, ignorecase=False) or store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
           Internet Reachable: Yes<br />
           {% else %}
-          Internet Reachable: <span style="color: red">No</span><br />
+          Internet Reachable: No 🔴<br />
           {% endif %}
           {% else %}
-          Internet Reachable: <span style="color: red">N/A</span><br />
+          Internet Reachable: N/A 🔴<br />
           {% endif %}
           {% if not store_internet_egress.stderr | default("failed") %}
           {% if store_internet_egress.stdout | regex_search("asgi1", multiline=True, ignorecase=False) %}
@@ -193,62 +193,62 @@
           {% elif store_internet_egress.stdout | regex_search("sast1", multiline=True, ignorecase=False)  %}
           Internet Egress: Sacramento<br />
           {% else %}
-          Internet Egress: <span style="color: red">Unknown</span><br />
+          Internet Egress: Unknown 🔴<br />
           {% endif %}
           {% else %}
-          Internet Egress: <span style="color: red">N/A</span><br />
+          Internet Egress: N/A 🔴<br />
           {% endif %}
           {% if not store_switch_dns_test.stderr | default("failed") %}
           {% if store_switch_dns_test.stdout | regex_search("Translating.+domain\sserver\s\(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\)\s\[OK\]", multiline=True, ignorecase=False) %}
           DNS Resolution Functional: Yes<br />
           {% else %}
-          DNS Resolution Functional: <span style="color: red">No</span><br />
+          DNS Resolution Functional: No 🔴<br />
           {% endif %}
           {% else %}
-          DNS Resolution Functional: <span style="color: red">N/A</span><br />
+          DNS Resolution Functional: N/A 🔴<br />
           {% endif %}
           {% if not store_switch_connect_ws_site.stderr | default("failed") %}
           {% if store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
           Williams Sonoma Site (williams-sonoma.com) Reachable: Yes<br />
           {% else %}
-          Williams Sonoma Site (williams-sonoma.com) Reachable: <span style="color: red">No</span><br />
+          Williams Sonoma Site (williams-sonoma.com) Reachable: No 🔴<br />
           {% endif %}
           {% else %}
-          Williams Sonoma Site (williams-sonoma.com) Reachable: <span style="color: red">N/A</span><br />
+          Williams Sonoma Site (williams-sonoma.com) Reachable: N/A 🔴<br />
           {% endif %}
           {% if not store_switch_connect_storesweb.stderr | default("failed") %}
           {% if store_switch_connect_storesweb.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
           Store Wide Web Site ({{ storesweb_fqdn }}) Reachable: Yes<br />
           {% else %}
-          Store Wide Web Site ({{ storesweb_fqdn }}) Reachable: <span style="color: red">No</span><br />
+          Store Wide Web Site ({{ storesweb_fqdn }}) Reachable: No 🔴<br />
           {% endif %}
           {% else %}
-          Store Wide Web Site ({{ storesweb_fqdn }}) Reachable: <span style="color: red">N/A</span><br />
+          Store Wide Web Site ({{ storesweb_fqdn }}) Reachable: N/A 🔴<br />
           {% endif %}
           {% if not store_switch_connect_verifone.stderr | default("failed") %}
           {% if store_switch_connect_verifone.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
           Verifone API (api.vfipayna.com) Reachable: Yes<br />
           {% else %}
-          Verifone API (api.vfipayna.com) Reachable: <span style="color: red">No</span><br />
+          Verifone API (api.vfipayna.com) Reachable: No 🔴<br />
           {% endif %}
           {% else %}
-          Verifone API (api.vfipayna.com) Reachable: <span style="color: red">N/A</span><br />
+          Verifone API (api.vfipayna.com) Reachable: N/A 🔴<br />
           {% endif %}
           Verifone active firewall sessions:<br />
           {% if not active_verifone_sessions_ashburn.stderr | default("failed") %}
             Ashburn: {{ active_verifone_sessions_ashburn.stdout_lines | length - 1 }}<br />
           {% else %}
-            Ashburn: <span style="color: red">N/A</span><br />
+            Ashburn: N/A 🔴<br />
           {% endif %}
           {% if not active_verifone_sessions_rocklin.stderr | default("failed") %}
             Rocklin: {{ active_verifone_sessions_rocklin.stdout_lines | length - 1 }}<br />
           {% else %}
-            Rocklin: <span style="color: red">N/A</span><br />
+            Rocklin: N/A 🔴<br />
           {% endif %}
           {% if not active_verifone_sessions_sacramento.stderr | default("failed") %}
             Sacramento: {{ active_verifone_sessions_sacramento.stdout_lines | length - 1 }}<br />
           {% else %}
-            Sacramento: <span style="color: red">N/A</span><br />
+            Sacramento: N/A 🔴<br />
           {% endif %}
 
     - name: Update incident work notes
