--- a/playbooks/snow_attach_store_diagnostic_report.yml
+++ b/playbooks/snow_attach_store_diagnostic_report.yml
@@ -115,11 +115,16 @@
               {{ c | title }}:<br />
           {% for p in properties %}
           {% set stats =  tloc_stats.json.data | selectattr("remote_color", "equalto", c) | map(attribute=p | lower) | list %}
-          {% set stats_mean = "%.2f" | format(stats | sum / stats | length) %}
+          {% set stats_count = stats | length %}
+          {% if stats_count > 0 %}
+          {% set stats_mean = "%.2f" | format(stats | sum / stats_count) %}
           {% if p == "vQoE_Score" and stats_mean | int <= 5 %}
-                {{ p | replace("_", " ") }}: {{ stats_mean }} 🔴<br />
+                {{ p | replace("_", " ") }}: {{ stats_mean }} 🔴
           {% else %}
-                {{ p | replace("_", " ") }}: {{ stats_mean }}<br />
+                {{ p | replace("_", " ") }}: {{ stats_mean }}
+          {% endif %}
+          {% else %}
+                {{ p | replace("_", " ") }}: N/A 🔴
           {% endif %}
           {% endfor %}
           {% endfor %}
@@ -161,9 +166,9 @@
               Top 5 Worst:<br />
           {% for c in (mist_client_stats.json | sort(attribute="rssi"))[:5] %}
           {% if c.hostname | default("") and c.hostname | default("") != "\"\"" %}
-                {{ c.ip }} ({{ c.hostname }}):<br />
+                {{ c.ip | default("0.0.0.0") }} ({{ c.hostname }}):<br />
           {% else %}
-                {{ c.ip }}:<br />
+                {{ c.ip | default("0.0.0.0") }}:<br />
           {% endif %}
                   RSSI: {% if c.rssi | int > -70 %}{{ c.rssi }}{% else %}{{ c.rssi }} 🔴{% endif %}<br />
                   SNR: {% if c.snr | int > 25 %}{{ c.snr }}{% else %}{{ c.snr }} 🔴{% endif %}<br />
