Update next step recommendations

--- a/playbooks/snow_attach_store_diagnostic_report.yml
+++ b/playbooks/snow_attach_store_diagnostic_report.yml
@@ -38,13 +38,15 @@
           {% set issue = namespace(found = false) %}
           Store Switch:<br />
           {% if not store_switch_ping.stderr | default("failed") %}
-          {% if store_switch_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) %}
+          {% set store_switch_pingable = true if store_switch_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) else false %}
+          {% if store_switch_pingable %}
             Pingable: Yes<br />
           {% else %}
           {% set issue.found = true %}
             Pingable: No 🔴<br />
           {% endif %}
           {% else %}
+          {% set store_switch_pingable = false %}
           {% set issue.found = true %}
             Pingable: N/A 🔴<br />
           {% endif %}
@@ -56,13 +58,15 @@
           {% endif %}
           Store Router:<br />
           {% if not store_router_ping.stderr | default("failed") %}
-          {% if store_router_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) %}
+          {% set store_router_pingable = true if store_switch_uptime.stdout_lines[5] | regex_replace("^.+uptime is ", "") else false %}
+          {% if store_router_pingable %}
             Pingable: Yes<br />
           {% else %}
           {% set issue.found = true %}
             Pingable: No 🔴<br />
           {% endif %}
           {% else %}
+          {% set store_router_pingable = false %}
           {% set issue.found = true %}
             Pingable: N/A 🔴<br />
           {% endif %}
@@ -79,16 +83,20 @@
           {% endif %}
           {% if not sdwan_store %}
           {% if not store_bb_tunnel_status.stderr | default("failed") %}
-          {% if store_bb_tunnel_status.stdout | regex_search("prefixes\s[1-9]\d*\s*$", multiline=True, ignorecase=False) %}
+          {% set bb_tunnel_up = true if store_bb_tunnel_status.stdout | regex_search("prefixes\s[1-9]\d*\s*$", multiline=True, ignorecase=False) else false %}
+          {% if bb_tunnel_up %}
           Broadband Tunnel: Up<br />
           {% else %}
           {% set issue.found = true %}
           Broadband Tunnel: Down 🔴<br />
           {% endif %}
           {% else %}
+          {% set bb_tunnel_up = false %}
           {% set issue.found = true %}
           Broadband Tunnel: N/A 🔴<br />
           {% endif %}
+          {% else %}
+          {% set bb_tunnel_up = false %}
           {% endif %}
           {% if not store_internet_egress.stderr | default("failed") %}
           {% if store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=True, ignorecase=False) or store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
@@ -294,8 +302,8 @@
           {% set rssi =  mist_client_stats.json | map(attribute='rssi') | sort %}
             RSSI:<br />
               Best: {% if rssi[-1] | int > -70 %}{{ rssi[-1] }}{% else %}{{ rssi[-1] }} 🔴{% set issue.found = true %}{% endif %}<br />
-              Worst: {% if rssi[0] | int > -70 %}{{ rssi[0] }}{% else %}{{ rssi[0] }} 🔴{% set issue.found = true %}{% endif %}<br />
-              Median: {% if rssi[rssi | length // 2] | int > -70 %}{{ rssi[rssi | length // 2] }}{% else %}{{ rssi[rssi | length // 2] }} 🔴{% set issue.found = true %}{% endif %}<br />
+              Worst: {% if rssi[0] | int > -70 %}{{ rssi[0] }}{% else %}{{ rssi[0] }} 🔴{% endif %}<br />
+              Median: {% if rssi[rssi | length // 2] | int > -70 %}{{ rssi[rssi | length // 2] }}{% else %}{{ rssi[rssi | length // 2] }} 🔴{% endif %}<br />
               Top 5 Worst:<br />
           {% for c in (mist_client_stats.json | sort(attribute="rssi"))[:5] %}
           {% if c.hostname | default("") and c.hostname | default("") != "\"\"" %}
@@ -317,23 +325,42 @@
           {% endif %}
           <br />
           <h3>Recommended Next Steps</h3><pre style="background-color: transparent; border-width: 0">
-          {% if (sdwan_store and
-                (sessions.private.count > 0 and sessions.private.count == sessions.private.down or
-                sessions.internet.count > 0 and sessions.internet.count == sessions.internet.down)) %}
-          {% if sdwan_store %}
-          {% if sessions.private.count > 0 and sessions.private.count == sessions.private.down %}
+          {% set sdwan_private_down = true if sdwan_store and
+                                                  (sessions.private.count > 0 and
+                                                  sessions.private.count == sessions.private.down) else false %}
+          {% set sdwan_internet_down = true if sdwan_store and
+                                                  (sessions.internet.count > 0 and
+                                                  sessions.internet.count == sessions.internet.down) else false %}
+          {% set store_reachable = true if store_switch_pingable and store_router_pingable else false %}
+          {% if not store_reachable or
+                  sdwan_private_down or
+                  sdwan_internet_down or
+                  not bb_tunnel_up %}
+          {# Specific recommendations #}
+          {# Store connectivity #}
+          {% if not store_reachable %}
+          {# If the store router and switch are not pingable #}
+          ⏺ Store is not reachable, call the store MOD to verify power<br />
+          {% elif sdwan_store %}
+          {% if sdwan_private_down %}
           ⏺ All SD-WAN private tunnels are down, confirm that a Verizon support case was auto created and update the incident with the details<br />
           {% endif %}
-          {% if sessions.internet.count > 0 and sessions.internet.count == sessions.internet.down %}
+          {% if sdwan_internet_down %}
           ⏺ All SD-WAN internet tunnels are down, open a ticket with Granite and update the incident with the details<br />
           {% endif %}
-          {% if issue.found %}
-          ⏺ Review the issues in the above Store Analysis section<br />
-          {% endif %}
-          {% endif %}
-          {% elif issue.found %}
-          ⏺ Review the issues in the above Store Analysis section<br />
           {% else %}
+          {% if not bb_tunnel_up %}
+          {# Else if no SD-WAN and broadband tunnel is down #}
+          ⏺ Broadband tunnel is down, open a ticket with Granite and update the incident with the details<br />
+          {% endif %}
+          {% endif %}
+          {# General recommendation #}
+          ⏺ Review all issues in the above Store Analysis section<br />
+          {% elif issue.found %}
+          {# General recommendation when an issue is detected #}
+          ⏺ Review all issues in the above Store Analysis section<br />
+          {% else %}
+          {# Default recommendation #}
           ⏺ Look for latency issues in the attached diagnostic report<br />
           {% endif %}
 
