--- a/playbooks/tasks/snow_attach_store_diagnostic_report/mist.yml
+++ b/playbooks/tasks/snow_attach_store_diagnostic_report/mist.yml
@@ -8,11 +8,13 @@
     method: GET
     status_code: 200
   register: mist_sites
+  when: mist_store
   ignore_errors: true
 
 - name: Mist | Set mist_site_id fact
   ansible.builtin.set_fact:
     mist_site_id: "{{ mist_sites.json | selectattr('name', 'search', store_number + '$') | map(attribute='id') | join }}"
+  when: mist_store
   ignore_errors: true
 
 - name: Mist | Fetch site stats
@@ -24,6 +26,7 @@
     method: GET
     status_code: 200
   register: mist_site_stats
+  when: mist_store
   ignore_errors: true
 
 - name: Mist | Fetch client stats
@@ -35,6 +38,7 @@
     method: GET
     status_code: 200
   register: mist_client_stats
+  when: mist_store
   ignore_errors: true
 
 - name: Mist | Fetch WLANs
@@ -46,4 +50,5 @@
     method: GET
     status_code: 200
   register: mist_wlans
+  when: mist_store
   ignore_errors: true
